Coverity analysis defect 162360: Uninitialized pointer field

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-09-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized pointer field

      The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
      /src/mongo/db/timeseries/bucket_catalog/execution_stats.h:138: UNINIT_CTOR 162360 The compiler-generated constructor for this class does not initialize "_globalStats".

            Assignee:
            Binh Vo
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: