SERVER-108535 ExecutionStatsController checks for _globalStats initialization (#41718)

GitOrigin-RevId: 5b29427a5c1fc7d465d0733d79793c3577138550